--- a/iot-manager/Cargo.toml
+++ b/iot-manager/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2021"
 [dependencies]
 actix-web = { version = "4" }
 postgres = "0.19.9"
+lazy_static = "1.4.0"
+tokio = { version = "1.41.0", features = ["full"] }
+tokio-postgres = { version = "0.7" }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
